unpackaged/main/default/objects/Installs__c/Installs__c.object-meta.xml
<CustomObject>
    <description>Tracking installations</description>
    <label>Install</label>
    <nameField>
        <label>Installs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>