unpackaged/main/default/objects/Installs__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (depreciated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installs</relationshipLabel>
    <relationshipName>Installs</relationshipName>
    <type>Lookup</type>
</CustomField>