unpackaged/main/default/objects/Installs__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <formula>IF(
	ISBLANK( Opportunity__r.Estimated_Completion_Date__c ),
	"",
	TEXT( MONTH( Opportunity__r.Estimated_Completion_Date__c) ) &amp; "/" &amp; TEXT( DAY( Opportunity__r.Estimated_Completion_Date__c) ) &amp; "/" &amp; TEXT( YEAR( Opportunity__r.Estimated_Completion_Date__c) )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date (depreciated)</label>
    <type>Text</type>
</CustomField>