unpackaged/main/default/objects/Installs__c/fields/Install_Notes__c.field-meta.xml
<CustomField>
    <fullName>Install_Notes__c</fullName>
    <label>Install Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>