unpackaged/main/default/objects/Installs__c/fields/Install_Status__c.field-meta.xml
<CustomField>
    <fullName>Install_Status__c</fullName>
    <label>Install Status (Depreciated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Defining</fullName>
            </value>
            <value>
                <fullName>Ready to Install</fullName>
            </value>
            <value>
                <fullName>Waiting for Parts</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Waiting on Construction</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Complete - Waiting on Port</fullName>
            </value>
            <value>
                <fullName>Waiting on Image</fullName>
            </value>
            <value>
                <fullName>Waiting for Numbers</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>