unpackaged/main/default/objects/Installs__c/fields/Install_Status_Opp__c.field-meta.xml
<CustomField>
    <fullName>Install_Status_Opp__c</fullName>
    <formula>Text(Opportunity__r.Install_Status_Opp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Status</label>
    <type>Text</type>
</CustomField>