unpackaged/main/default/objects/Installs__c/fields/Opp_Installers_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Opp_Installers_Event_Created__c</fullName>
    <formula>Opportunity__r.Installers_Calendar_Event_Added__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Installers Event Created</label>
    <type>Checkbox</type>
</CustomField>