unpackaged/main/default/objects/Installs__c/fields/Opportunity_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Number__c</fullName>
    <formula>Opportunity__r.Contract_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contract Number</label>
    <type>Text</type>
</CustomField>