unpackaged/main/default/objects/Installs__c/fields/Opportunity_Installed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Installed_Date__c</fullName>
    <formula>Opportunity__r.Install_Date_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Installed Date</label>
    <type>Date</type>
</CustomField>