unpackaged/main/default/objects/Installs__c/fields/Opportunity_Installer_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Installer_1__c</fullName>
    <formula>Opportunity__r.Installer_1__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Installer 1</label>
    <type>Text</type>
</CustomField>