unpackaged/main/default/objects/Installs__c/fields/Opportunity_Installer_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Installer_2__c</fullName>
    <formula>Opportunity__r.Installer_2__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Installer 2</label>
    <type>Text</type>
</CustomField>