unpackaged/main/default/objects/Installs__c/fields/Opportunity_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Project_Manager__c</fullName>
    <formula>Opportunity__r.OP_Project_Manager__r.FirstName + " " + Opportunity__r.OP_Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Project Manager</label>
    <type>Text</type>
</CustomField>