unpackaged/main/default/objects/Installs__c/fields/Opportunity_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sales_Person__c</fullName>
    <formula>Opportunity__r.Owner.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sales Person</label>
    <type>Text</type>
</CustomField>