unpackaged/main/default/objects/Installs__c/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>